Update controller and handle exceptions